Changed id of user_name to user_id to avoid conflict with Lawrence's new tables. Also tweaked the menu's background a bit. Force content to be 100% height (pushes footer off screen too) to prevent content from being to short and showing menu behind it.

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -2,7 +2,7 @@
 
      $font-stack: "Open Sans", "Lucida Grande", Verdana, Arial, sans-serif;
 $mono-font-stack: "Consolas", "Courier New", Courier, mono, serif;
-       $bg-color: #e2efed;
+       $bg-color: #e8f4f2;
   $primary-color: #fff;
      $light-blue: #89b1dd;
            $blue: #086ae0;
